--- a/dev/inetpub/css/integracion.css
+++ b/dev/inetpub/css/integracion.css
@@ -1,3 +1,24 @@
 html,body{
  font-family: 'Ubuntu', sans-serif;
 }
+
+iframe {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    line-height: 0;
+    float: left; 
+}
+
+#previo {
+  margin-left: 10px;
+  padding:0px;
+  border: 1px solid #000;
+  float:left;
+  width:360px;
+  height: 200px;
+}
+
+.wi20 {
+ width:20px;
+}
